fail_crate/tests/duplicate_pub.stderr
error: `pub` specified more than once in main `#[new(...)]`.
 --> fail_crate/tests/duplicate_pub.rs:4:12
  |
4 | #[new(pub, pub)]
  |            ^^^
