fail_crate/tests/duplicate_pub.rs
use inew::New;

#[derive(New)]
#[new(pub, pub)]
struct A;

fn main() {}
